# pdf-util

./: README.md  pyproject.toml
src/pdf_util/: __init__.py  split.py
