[project]
name = "pdf-util"
version = "0.1.0"
description = "PDF utility for splitting and manipulating PDF files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=6.1.1,<7.0.0",
]

[project.scripts]
pdf-split = "pdf_util.split:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_util"]
